Mon Jun 20 21:49:02 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Log/Iterator_i.cpp:
	* orbsvcs/orbsvcs/Log/Iterator_i.h:

	  Added iterator inactivity timer that causes the iterator to self
	  destruct after 1 hour of inactivity.  This should probably be a
	  parameter that is specified when the service is started.

	* orbsvcs/orbsvcs/Log/Iterator_i.cpp:
	* orbsvcs/orbsvcs/Log/Iterator_i.h:
	* orbsvcs/orbsvcs/Log/Log_i.cpp:

	  Pass reactor to Iterator constructor.

        * orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Service.cpp:
        * orbsvcs/Logging_Service/Event_Logging_Service/Event_Logging_Service.cpp:
        * orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.cpp:
        * orbsvcs/Logging_Service/RTEvent_Logging_Service/RTEvent_Logging_Service.cpp:

	  Removed the debug messages that indicated the log service was
	  starting, and the name the ior was registered with the naming
	  service.  TAO's other ORBservice implementations don't output
	  this sort of mundane information.

Mon Jun 20 12:21:00 2005  Gary Maxey <gary.maxey@hp.com>

        * TAO_IDL/be_include/be_generator.h
        * TAO_IDL/be_include/be_valuebox.h
        * TAO_IDL/be_include/be_visitor.h
        * TAO_IDL/be_include/be_visitor_valuebox.h
        * TAO_IDL/be_include/be_visitor_module/module.h
        * TAO_IDL/be_include/be_visitor_root/root.h
        * TAO_IDL/be_include/be_visitor_valuebox/any_op_ch.h
        * TAO_IDL/be_include/be_visitor_valuebox/any_op_cs.h
        * TAO_IDL/be_include/be_visitor_valuebox/cdr_op_ch.h
        * TAO_IDL/be_include/be_visitor_valuebox/cdr_op_cs.h
        * TAO_IDL/be_include/be_visitor_valuebox/field_ch.h
        * TAO_IDL/be_include/be_visitor_valuebox/field_ci.h
        * TAO_IDL/be_include/be_visitor_valuebox/union_member_ci.h
        * TAO_IDL/be_include/be_visitor_valuebox/valuebox.h
        * TAO_IDL/be_include/be_visitor_valuebox/valuebox_ch.h