@@ -28,7 +28,7 @@ Event_Logging_Service::~Event_Logging_Service (void)
 
 void
 Event_Logging_Service::init_ORB  (int& argc, char *argv []
-                             ACE_ENV_ARG_DECL)
+				  ACE_ENV_ARG_DECL)
 {
   this->orb_ = CORBA::ORB_init (argc,
                                 argv,
@@ -122,14 +122,15 @@ Event_Logging_Service::startup (int argc, char *argv[]
     this->orb_->object_to_string (obj.in () ACE_ENV_ARG_PARAMETER);
   ACE_CHECK_RETURN (-1);
 
-  if (true) 
+  if (true)
     {
-      CORBA::Object_var table_object = 
-	this->orb_->resolve_initial_references ("IORTable");
+      CORBA::Object_var table_object =
+        this->orb_->resolve_initial_references ("IORTable"
+                                                ACE_ENV_ARG_PARAMETER);
       ACE_CHECK_RETURN (-1);
 
-      IORTable::Table_var adapter = 
-	IORTable::Table::_narrow (table_object.in ());
+      IORTable::Table_var adapter =
+        IORTable::Table::_narrow (table_object.in ());
       ACE_CHECK_RETURN (-1);
 
       adapter->bind("EventLogService", ior.in ());
